# STC15lib

./: .gitignore  8051-toolchain.cmake  CHANGELOG.md  CMakeLists.txt  Generic-SDCC-C.cmake  README.md  VERSION_HISTORY.md  cmake_build_summary.py  cmake_examples_build_summary.py  compile_examples.py  compile_utils.py  doxygen.conf  doxygen.py  library.json  pio_examples_build_summary.py  platformio.ini  size.py  toolchain-SDCC.cmake
examples/: .sconsign.dblite  CMakeLists.txt  README  README.md  SConstruct  bits.c  bits_example.c  delay.c  delay_example.c  frequency.c  frequency_example.c  timer_mode0_1T_interrupt_example.c  timer_mode0_example.c  timer_mode0_interrupt_example.c  timer_mode0_sync_example.c  uart.c  uart_example.c
examples/adc/: CMakeLists.txt  SConscript  adc_async_example.c  adc_read_example.c
examples/bits/: CMakeLists.txt  SConscript  bits_example.c
examples/chip_id/: CMakeLists.txt  SConscript  chip_id_example.c
examples/comparator/: CMakeLists.txt  SConscript  comparator_async_example.c
examples/counter/: CMakeLists.txt  SConscript
examples/counter/counter0/: CMakeLists.txt  SConscript
examples/counter/counter0/mode0/: CMakeLists.txt  SConscript  counter0_mode0.c  counter0_mode0_example.c  counter0_mode0_gate_example.c  (+1 more)
examples/counter/counter2/: SConscript
examples/delay/: CMakeLists.txt  SConscript  delay_example.c
examples/eeprom/: CMakeLists.txt  SConscript  eeprom_data.hex  eeprom_erase_page_example.c  eeprom_read_byte_example.c  eeprom_write_byte_example.c  eeprom_write_page_example.c
examples/frequency/: CMakeLists.txt  SConscript  frequency_example.c  master_clock_output.c  master_clock_output_example.c  slowdown_example.c
examples/gpio/: CMakeLists.txt  SConscript
examples/gpio/mode/: CMakeLists.txt  SConscript  pin_mode_example.c  pin_push_pull_init_example.c
examples/gpio/value/: CMakeLists.txt  SConscript  pin_read_value_example.c
examples/hour_glass/: hour_glass.c
examples/interrupt/: CMakeLists.txt  SConscript  interrupt_example.c  interrupt_int0_example.c  interrupt_int1_example.c
examples/interrupts/: interrupts_example.c
examples/memory_dumper/: SConscript  mem_dump.c
examples/pin/: SConscript
examples/pin/mode/: CMakeLists.txt  SConscript  pin_input_only_init_example.c  pin_mode_example.c  pin_open_drain_init_example.c  pin_push_pull_init_example.c  pin_quasi_bidiretional_init_example.c  port_mode_init_example.c
examples/pin/state/: SConscript  pin_read_state_example.c
examples/pin/value/: CMakeLists.txt  SConscript  pin_read_value_example.c
examples/power_management/: CMakeLists.txt  SConscript  idle_example.c  low_voltage_example.c  power_management.h  power_management_example.c  powerdown_example.c  powerdown_example1.c  wakeup_seconds_example.c
examples/reset/: CMakeLists.txt  SConscript  reset_example.c  wdt_clear_example.c  wdt_flag_example.c  wdt_start_example.c
examples/timer/: CMakeLists.txt  SConscript
examples/timer/aux/: SConscript  timer0_12T_freq_uint16_example.c  timer0_12T_ticks_example.c  timer0_freq_example.c  timer0_freq_uint16_example.c  timer0_freq_uint8_example.c  timer0_mode0_ticks_example.c
examples/timer/common/: CMakeLists.txt  SConscript  timer0_common_example.c  timer0_mode0_ms_to_ticks_example.c  timer0_mode1_ms_to_ticks_example.c  timer0_mode3_ms_to_ticks_example.c  timer0_ms2ticks_example.c  timer2_common_example.c  timer2_ms2ticks_example.c
examples/timer/mode0/: CMakeLists.txt  SConscript  timer0_mode0_12T_sync_example.c  timer0_mode0_1T_interrupt_example.c  timer0_mode0_1T_sync_example.c  timer0_mode0_P35_output.c  timer0_mode0_enable_by_INT0_example.c  timer2_mode0_1T_interrupt_example.c  timer2_mode0_P30_output.c
examples/timer/mode1/: CMakeLists.txt  SConscript  timer0_mode1_12T_sync_example.c  timer0_mode1_1T_interrupt_example.c  timer0_mode1_1T_sync_example.c
examples/timer/mode2/: SConscript  timer0_mode2_12T_interrupt_example.c  timer0_mode2_12T_sync_example.c  timer0_mode2_1T_sync_example.c
examples/timer/mode3/: CMakeLists.txt  SConscript
examples/timer/shared/: timer0_P35_output.c  timer0_enable_by_INT0_example.c
examples/timers/common/: timer0_common_example.c  timer0_enable_example.c  timer2_common_example.c
examples/timers/mode0/: timer0_enable_example.c  timer0_mode0_1T_sync_example.c  timer0_mode0_P35_output.c  timer2_mode0_12T_interrupt_example.c  timer2_mode0_P30_output.c
examples/uart/: CMakeLists.txt  SConscript  uart_example.c
examples/uart/legacy/: SConscript  uart.c
examples/uart/mode0/: CMakeLists.txt  SConscript  uart1_mode0_baud_rates_example.c  uart1_mode0_send_example.c
examples/uart/mode1/: CMakeLists.txt  SConscript
examples/uart/mode2/: CMakeLists.txt  SConscript  uart1_mode2_receive_even_parity_example.c  uart1_mode2_receive_odd_parity_example.c  uart1_mode2_send_9bit_example.c  uart1_mode2_send_example.c  uart1_mode2_send_odd_parity_example.c
examples/uart/mode3/: SConscript
examples/uart/simple/: CMakeLists.txt  SConscript  uart_example.c
examples/wdt/: CMakeLists.txt  SConscript  wdt_clear_example.c  wdt_flag_example.c  wdt_start_example.c
src/: CMakeLists.txt  README  adc.c  bits.c  chip_id.c  chip_id_example.c  comparator.c  counter0_mode0.c  delay.c  eeprom.c  frequency.c  frequency_example.c  interrupts.c  main.c  master_clock_output.c  ms_to_ticks_common.c  pin.c  power_management.c  reset.c  ticks_to_ms_common.c  timer.c  timer0_common.c  timer0_mode0.c  timer0_mode0_P35_output.c  timer0_mode1.c  timer0_to_ms.c  timer0_to_ms_common.c  timer2_common.c  timer2_mode0.c  timer2_mode0_12T_interrupt_example.c  timer2_mode0_1T_interrupt_example.c  timer2_to_ms.c  timer8bit_ticks_to_mcs.c  timer_Hz_to_ticks.c  timer_Hz_to_ticks_8bit.c  timer_example.c  timer_mode0.c  timer_ms_to_ticks.c  timer_ms_to_ticks_table.c  timer_ticks_to_Hz.c  (+12 more)
utils/csv2hex/: .coverage  README.md  input.csv  output.hex  pyproject.toml
utils/csv2hex/src/: csv2hex.py
utils/csv2hex/tests/: test_csv2hex.py
utils/memory_dumper/: CMakeLists.txt  README.md  SConscript  mem_dump.c  mem_print.c  mem_print.h
(+1561 files in other folders)
