add_subdirectory("adc")
add_subdirectory("bits")
add_subdirectory("chip_id")
add_subdirectory("counter")
add_subdirectory("delay")
add_subdirectory("eeprom")
add_subdirectory("frequency")
add_subdirectory("interrupt")
add_subdirectory("memory_dumper")
add_subdirectory("pin")
add_subdirectory("power_management")
add_subdirectory("reset")
add_subdirectory("timer")
add_subdirectory("uart")