[project]
name = "csv2hex"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Golovanov",email = "mike.golovanov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "intelhex (>=2.3.0,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "csv2hex", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
